# Kaspeak

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.ru.md  generate_macos_app.sh
src/: app_state.rs  chat.rs  constants.rs  gui.rs  main.rs  settings.rs  utils.rs
src/audio/: mod.rs  player.rs  recorder.rs
src/core/: broadcaster.rs  listener.rs  mod.rs  wallet.rs
src/logs/: logger.rs  mod.rs  multi.rs
src/models/: instruction.rs  message.rs  mod.rs  payload.rs  recording.rs  user.rs
