[package]
name = "kaspeak"
version = "0.1.1-alpha"
edition = "2021"
description = "A voice and text communication tool for the Kaspa network"
repository = "https://github.com/kaspeak/Kaspeak"
readme = "README.md"
homepage = "https://kaspeak.net"

[package.metadata.bundle]
name = "Kaspeak"
identifier = "net.kaspeak.Kaspeak"
icon = ["assets/32x32_1.png", "assets/256x256_1.png"]
version = "v0.1.1-alpha"
copyright = "Copyright (c) Kaspeak 2024. All rights reserved."
category = "Developer Tool"
short_description = "A voice and text communication tool for the Kaspa network"
osx_url_schemes = ["net.kaspeak.Kaspeak"]
osx_minimum_system_version = "10.11"

#Should be added in Info.plist after bundling
#<key>NSMicrophoneUsageDescription</key>
#<string>Kaspeak voice recording</string>

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log
log = "0.4.22"
env_logger = "0.11.5"

# rusty-kaspa
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "stable" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "stable" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "stable" }

# workflow для управления асинхронностью
workflow-core = "0.18.0"

# async
futures = "0.3.31"
tokio = "1.41.1"

# audio
cpal = "0.15.3"
rodio = "0.20.1"
opus = "0.3.0"

# gui
iced = { version = "0.13.1", features = ["tokio", "image"] }
webbrowser = "1.0.3"

# keyboard
rdev = "0.5.3"

# utils
ctrlc = { version = "3.2", features = ["termination"] }
hex = "0.4.3"
indexmap = "2.7.0"
dashmap = "6.1.0"
config = "0.15.3"
sha2 = "0.10.8"
lazy_static = "1.5.0"
chrono = "0.4.41"
zstd = "0.13.2"
image = "0.24.9"
uuid = "1.11.0"

# settings
serde = "1.0.217"
bincode = "1.3.3"
aes-gcm = "0.10.3"
rand = "0.8.5"


# https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true